完成了用户个人信息的编辑

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -5,11 +5,9 @@ body {
   background-color: #f5f7f9;
 }
 
-.van-nav-bar__content {
+.page-nav-bar {
   background-color: #3296fa;
-  .van-nav-bar__title {
-    color: #fff;
-  }
+  .van-nav-bar__title,
   .van-icon {
     color: #fff;
   }
